--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -11,7 +11,7 @@
     <title>Página de inicio</title>
 </head>
 <header>
-    <img src="../../images/logo.png">
+    <img src="../../images/logo.png" class="logo">
     <p><strong>My company</strong></p>
     <nav>
         <ul>
