--- a/src/pages/Careers/index.html
+++ b/src/pages/Careers/index.html
@@ -1,135 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Equipo 3" />
+    <meta
+      name="description"
+      content="Tarea evaluativa 2 - Página de carreras"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Página de carreras</title>
+    </style>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Equipo 3">
-  <meta name="description" content="Tarea evaluativa 2 - Página de carreras">
-  <link rel="stylesheet" href="styles.css">
-  <title>Página de carreras</title>
-</head>
-<header>
-  <img src="../../images/logo.png">
-  <p><strong>My company</strong></p>
-  <nav>
-    <ul>
-      <li><a href="../Home/index.html"><strong>Home</strong></a></li>
-      <li><a href="../Blog/index.html"><strong>Blog</strong></a></li>
-      <li><a href="../Contact/index.html"><strong>Contact us</strong></a></li>
-      <li><a href="../Careers/index.html"><strong>Careers</strong></a></li>
-    </ul>
-  </nav>
-</header>
-
-<body>
-  <img src="../../images/banner-placeholder.jpg" alt="banner">
-
-  <div>
-    <h3>Careers</h3>
-
-    <table>
-      <tr>
-        <th>Job</th>
-        <th>Location</th>
-        <th>Type</th>
-        <th>Vacancies</th>
-        <th>Application</th>
-      </tr>
-      <tr>
-        <td>Sr. Java Developer</td>
-        <td>Atlanta</td>
-        <td>Full-Time</td>
-        <td class="toCenter">3</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Qualifications:</td>
-        <td colspan="3">
-          Bachelor's degree or equivalent practical experience. <br />
-          5 years of experience in product management, co-founder or related
-          technical role. <br />
-          1 year of experience building and shipping technical products.
-        </td>
-        <td class="toCenter"><button>Apply</button></td>
-      </tr>
-      <tr>
-        <td>Sr. ReactJS Developer</td>
-        <td>New York</td>
-        <td>Full-Time</td>
-        <td class="toCenter">2</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Qualifications:</td>
-        <td colspan="3">
-          Bachelor's degree or equivalent practical experience. <br />
-          5 years of experience in product management, co-founder or related
-          technical role. <br />
-          1 year of experience building and shipping technical products.
-        </td>
-        <td class="toCenter"><button>Apply</button></td>
-      </tr>
-      <tr>
-        <td>Jr. Ruby Developer</td>
-        <td>San Francisco</td>
-        <td>Part-Time</td>
-        <td class="toCenter">1</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Qualifications:</td>
-        <td colspan="3">
-          Bachelor's degree or equivalent practical experience. <br />
-          5 years of experience in product management, co-founder or related
-          technical role. <br />
-          1 year of experience building and shipping technical products.
-        </td>
-        <td class="toCenter"><button>Apply</button></td>
-      </tr>
-      <tr>
-        <td>Sr. Python Developer</td>
-        <td>Miami</td>
-        <td>Full-Time</td>
-        <td class="toCenter">4</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>Qualifications:</td>
-        <td colspan="3">
-          Bachelor's degree or equivalent practical experience. <br />
-          5 years of experience in product management, co-founder or related
-          technical role. <br />
-          1 year of experience building and shipping technical products.
-        </td>
-        <td class="toCenter"><button>Apply</button></td>
-      </tr>
-    </table>
-  </div>
-  <div>
-    <div>
-      <h3>ARTICLES</h3>
-      <img src="../../images/image-placeholder.png" alt="image">
+  <header>
+    <div class="logo">
+      <img src="../../images/logo.png" />
     </div>
-    <p>
-      Watch our last conference about market trending in 2023... watch the
-      video
-    </p>
+    <h2 class = "pageTitle"><strong>My company</strong></h2>
 
-    <h3>WE ARE HIRING!</h3>
-    <h4>ReactJS Frontend Developer</h4>
-    <ul>
-      <li>5+ years of experience</li>
-      <li>B2 English proficiency</li>
-      <li>Solid bases in JavaScript, ReactJS and Redux</li>
-    </ul>
-  </div>
-  <footer>
-    <hr>
-    <small>&copy Copyright My Company 2023</small>
-    <hr>
-  </footer>
-</body>
+    <div>
+      <nav>
+        <ul class="nav-links">
+          <li>
+            <a href="../Home/index.html"
+              ><strong><u>Home</u></strong></a
+            >
+          </li>
+          <li>
+            <a href="../Blog/index.html"
+              ><strong><u>Blog</u></strong></a
+            >
+          </li>
+          <li>
+            <a href="../Contact/index.html"
+              ><strong><u>Contact us</u></strong></a
+            >
+          </li>
+          <li>
+            <a href="../Careers/index.html" class="active-tab"
+              ><strong><u>Careers</u></strong></a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <body>
+    <div class="banner"></div>
+
+    <main class="grid">
+      <article>
+        <h3>Careers</h3>
+
+        <table id="categories">
+          <tr>
+            <th>Job</th>
+            <th>Location</th>
+            <th>Type</th>
+            <th>Vacancies</th>
+            <th>Application</th>
+          </tr>
+          <tr>
+            <td>Sr. Java Developer</td>
+            <td>Atlanta</td>
+            <td>Full-Time</td>
+            <td class="toCenter">3</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Qualifications:</td>
+            <td colspan="2">
+              Bachelor's degree or equivalent experience. <br />
+              5 years of experience in product management. <br />
+              1 year of experience building Spring Core products.
+            </td>
+            <td></td>
+            <td class="toCenter"><button>Apply</button></td>
+          </tr>
+          <tr>
+            <td>Sr. ReactJS Developer</td>
+            <td>New York</td>
+            <td>Full-Time</td>
+            <td class="toCenter">2</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Qualifications:</td>
+            <td colspan="2">
+              Bachelor's degree or equivalent experience. <br />
+              5 years of experience in product management. <br />
+              1 year of experience building Spring Core products.
+            </td>
+            <td></td>
+            <td class="toCenter"><button>Apply</button></td>
+          </tr>
+          <tr>
+            <td>Jr. Ruby Developer</td>
+            <td>San Francisco</td>
+            <td>Part-Time</td>
+            <td class="toCenter">1</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Qualifications:</td>
+            <td colspan="2">
+              Bachelor's degree or equivalent experience. <br />
+              5 years of experience in product management. <br />
+              1 year of experience building Spring Core products.
+            </td>
+            <td></td>
+            <td class="toCenter"><button>Apply</button></td>
+          </tr>
+          <tr>
+            <td>Sr. Python Developer</td>
+            <td>Miami</td>
+            <td>Full-Time</td>
+            <td class="toCenter">4</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Qualifications:</td>
+            <td colspan="2">
+              Bachelor's degree or equivalent experience. <br />
+              5 years of experience in product management. <br />
+              1 year of experience building Spring Core products.
+            </td>
+            <td></td>
+            <td class="toCenter"><button>Apply</button></td>
+          </tr>
+        </table>
+      </article>
+
+      <aside>
+        <h3>Articles</h3>
+        <img src="../../images/image.png" alt="image" />
+        <p>
+          Watch our last conference about market trending in 2023...
+          <u>watch the video</u>
+        </p>
+
+        <h3>WE ARE HIRING!</h3>
+        <h4>ReactJS Frontend Developer</h4>
+        <ul>
+          <li>5+ years of experience</li>
+          <li>B2 English proficiency</li>
+          <li>Solid bases in JavaScript, ReactJS and Redux</li>
+        </ul>
+      </aside>
+    </main>
+    <footer>
+      <p>
+      &Copyright My Company 2023
+      </p>
+    </footer>
+  </body>
 </html>
