--- a/src/pages/Careers/index.html
+++ b/src/pages/Careers/index.html
@@ -11,14 +11,13 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <title>Página de carreras</title>
-    </style>
   </head>
 
   <header>
     <div class="logo">
       <img src="../../images/logo.png" />
     </div>
-    <h2 class = "pageTitle"><strong>My company</strong></h2>
+    <h2 class="pageTitle"><strong>My company</strong></h2>
 
     <div>
       <nav>
@@ -152,9 +151,7 @@
       </aside>
     </main>
     <footer>
-      <p>
-      &Copyright My Company 2023
-      </p>
+      <p>&Copyright My Company 2023</p>
     </footer>
   </body>
 </html>
