--- a/src/pages/Contact/index.html
+++ b/src/pages/Contact/index.html
@@ -1,104 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Equipo 3" />
-    <meta
-      name="description"
-      content="Tarea evaluativa 2 - Página de contacto"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Página de contacto</title>
-  </head>
 
-  <header>
-    <div class="logo">
-      <img src="../../images/logo.png" />
-    </div>
-    <h2 class="pageTitle"><strong>My company</strong></h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Equipo 3" />
+  <meta name="description" content="Tarea evaluativa 2 - Página de contacto" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Página de contacto</title>
+</head>
 
-    <div>
-      <nav>
-        <ul class="nav-links">
-          <li>
-            <a href="../Home/index.html"
-              ><strong><u>Home</u></strong></a
-            >
-          </li>
-          <li>
-            <a href="../Blog/index.html"
-              ><strong><u>Blog</u></strong></a
-            >
-          </li>
-          <li>
-            <a href="../Contact/index.html" class="active-tab"
-              ><strong><u>Contact us</u></strong></a
-            >
-          </li>
-          <li>
-            <a href="../Careers/index.html"
-              ><strong><u>Careers</u></strong></a
-            >
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+<header>
+  <div class="logo">
+    <img src="../../images/logo.png" />
+  </div>
+  <h2 class="pageTitle"><strong>My company</strong></h2>
 
-  <body>
-    <div class="banner"></div>
+  <div>
+    <nav>
+      <ul class="nav-links">
+        <li>
+          <a href="../Home/index.html"><strong><u>Home</u></strong></a>
+        </li>
+        <li>
+          <a href="../Blog/index.html"><strong><u>Blog</u></strong></a>
+        </li>
+        <li>
+          <a href="../Contact/index.html" class="active-tab"><strong><u>Contact us</u></strong></a>
+        </li>
+        <li>
+          <a href="../Careers/index.html"><strong><u>Careers</u></strong></a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
-    <main class="grid">
-      <div>
-        <h3>Contact</h3>
-        <img src="../../images/image-placeholder.png" alt="image" />
+<body>
+  <div class="banner"></div>
+
+  <main>
+    <h3>Contact Us</h3>
+    <grid class="grid">
+      <div class="grid1">
       </div>
-      <form action="">
-        <p>Tell us everything</p>
-        <div>
-          <strong><label for="first">First Name</label></strong>
-          <input
-            type="text"
-            id="first"
-            name="firstname"
-            placeholder="Type your name..."
-            required
-          />
+
+      <form class="grid2" action="">
+        <p>Tell us everything...</p>
+
+        <div class="text">
+
+          <div class="input">
+            <label for="first">First name</label>
+            <input type="text" id="first" name="firstname" placeholder="Type your name..." required />
+          </div>
+
+          <div class="input">
+            <label for="last">Last name</label>
+            <input type="text" id="last" name="lastname" placeholder="Type your lastname..." required />
+          </div>
+
         </div>
-        <div>
-          <strong><label for="last">Last Name</label></strong>
-          <input
-            type="text"
-            id="last"
-            name="lastname"
-            placeholder="Type your lastname..."
-            required
-          />
+
+        <div class="text">
+
+          <div class="input">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="youremail@domain.com" required />
+          </div>
+
+          <div class="input">
+            <label for="tel">Cellphone</label>
+            <input type="tel" id="tel" name="telephone" placeholder="+52 XXX XXX XXXX" required />
+          </div>
+
         </div>
-        <div>
-          <strong><label for="email">Email</label></strong>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="youremail@domain.com"
-            required
-          />
-        </div>
-        <div>
-          <strong><label for="tel">Cellphone</label></strong>
-          <input
-            type="tel"
-            id="tel"
-            name="telephone"
-            placeholder="+52 XXX XXX XXXX"
-            required
-          />
-        </div>
-        <div>
-          <strong><label for="category">You want to share...</label></strong>
+
+        <div class="input">
+          <label for="category">You want to share...</label>
           <select name="category" id="category-select" required>
             <option value="">Select an option</option>
             <option value=""></option>
@@ -106,20 +86,18 @@
             <option value=""></option>
           </select>
         </div>
-        <div>
-          <strong><label for="comment">Share your thoughts</label></strong>
-          <textarea
-            name="comment"
-            id="comment"
-            cols="20"
-            rows="10"
-            placeholder="Write here"
-          ></textarea>
+
+        <div class="input">
+          <label for="comment">Share your thoughts</label>
+          <textarea name="comment" id="comment" cols="20" rows="10" placeholder="Write here"></textarea>
         </div>
+        
       </form>
-    </main>
-    <footer>
-      <p>&Copyright My Company 2023</p>
-    </footer>
-  </body>
+    </grid>
+  </main>
+  <footer>
+    <p>&copy Copyright My Company 2023</p>
+  </footer>
+</body>
+
 </html>
