#5-contact-styling-finished

--- a/src/pages/Contact/index.html
+++ b/src/pages/Contact/index.html
@@ -42,7 +42,7 @@
 
   <main>
     <h3>Contact Us</h3>
-    <grid class="grid">
+    <grid class="grid-form">
       <div class="grid1">
       </div>
 
@@ -80,7 +80,7 @@
         <div class="input">
           <label for="category">You want to share...</label>
           <select name="category" id="category-select" required>
-            <option value="">Select an option</option>
+            <option value="">A complain</option>
             <option value=""></option>
             <option value=""></option>
             <option value=""></option>
@@ -91,10 +91,17 @@
           <label for="comment">Share your thoughts</label>
           <textarea name="comment" id="comment" cols="20" rows="10" placeholder="Write here"></textarea>
         </div>
-        
       </form>
     </grid>
+
+    <grid class="grid-button">
+      <div></div>
+      <div class="button-container">
+        <button type="submit">SEND TO AN ADVISOR</button>
+      </div>
+      </grid>
   </main>
+
   <footer>
     <p>&copy Copyright My Company 2023</p>
   </footer>
