#6-home-blog-css

--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -14,30 +14,26 @@
     <div class="logo">
       <img src="../../images/logo.png" />
     </div>
-    <h2 class="pageTitle"><strong>My company</strong></h2>
+    <h2 class="pageTitle"><strong>My Company</strong></h2>
 
     <div>
       <nav>
         <ul class="nav-links">
           <li>
             <a href="../Home/index.html" class="active-tab"
-              ><strong><u>Home</u></strong></a
-            >
-          </li>
-          <li>
-            <a href="../Blog/index.html"
-              ><strong><u>Blog</u></strong></a
-            >
-          </li>
-          <li>
-            <a href="../Contact/index.html"
-              ><strong><u>Contact us</u></strong></a
-            >
+              ><strong><u>Home</u></strong></a>
           </li>
           <li>
             <a href="../Careers/index.html"
-              ><strong><u>Careers</u></strong></a
-            >
+              ><strong><u>Careers</u></strong></a>
+          </li>
+          <li>
+            <a href="../Blog/index.html"
+              ><strong><u>Blog</u></strong></a>
+          </li>
+          <li>
+            <a href="../Contact/index.html"
+              ><strong><u>Contact us</u></strong></a>
           </li>
         </ul>
       </nav>
@@ -48,65 +44,66 @@
     <div class="banner"></div>
     <main class="grid">
       <article>
-        <h1>
-          <strong
-            >Solving your business challenges with design and technology</strong
-          >
-        </h1>
-        <p>
-          As one of the world's <strong>fastest-growing</strong> global
-          technology services providers, we deliver seamless, scalable digital
-          solutions, embedding the <strong>right technology</strong>,
-          <strong>methodology</strong> and <strong>mindsets</strong> within our
-          customers' organizations. Our technology expertise, focus on AI and
-          continous learning, combined with our diverse and inclusive teams,
-          allows us to deliver what you need to now, while building a roadmap to
-          <u>your future.</u>
-        </p>
+        <div>
+          <h1>
+            <strong>Solving your business challenges with design and technology</strong>
+          </h1>
+          <p class="mainp">
+            As one of the world's <strong>fastest-growing</strong> global
+            technology services providers, we deliver seamless, scalable digital
+            solutions, embedding the <strong>right technology</strong>,
+            <strong>methodology</strong> and <strong>mindsets</strong> within our
+            customers' organizations. Our technology expertise, focus on AI and
+            continous learning, combined with our diverse and inclusive teams,
+            allows us to deliver what you need to now, while building a roadmap to
+            <u>your future.</u>
+          </p>
+        </div>
 
-        <img
-          src="../../images/profilepic-placeholder.png"
-          alt="profilepic-placeholder"
-        />
-        <p>
-          Marck Donovan<br />
-          VP ENGINEERING<br />
-        </p>
-        <small
-          ><em
-            ><sup>*</sup> The best solution in the market to solve any problem
-            you may have.</em
-          ></small
-        >
+        <div class="rects" id="rects">
+          <div class="rect">
+            <div class="card_title">
+              <img src="../../images/profilepic-placeholder.png" alt="profilepic-placeholder">
+              <div class="reviewer">
+                <p>
+                  Marck Donovan <br>
+                  VP ENGINEERING
+                </p>
+              </div>
+            </div>
+            <blockquote>“ The best solution in the market to solve any problem yoy may have. 
+          </blockquote>
+          </div>
 
-        <img
-          src="../../images/profilepic-placeholder.png"
-          alt="profilepic-placeholder"
-        />
-        <p>
-          Marck Donovan<br />
-          VP ENGINEERING<br />
-        </p>
-        <small
-          ><em
-            ><sup>*</sup> The best solution in the market to solve any problem
-            you may have.</em
-          ></small
-        >
-        <img
-          src="../../images/profilepic-placeholder.png"
-          alt="profilepic-placeholder"
-        />
-        <p>
-          Marck Donovan<br />
-          VP ENGINEERING<br />
-        </p>
-        <small
-          ><em
-            ><sup>*</sup> The best solution in the market to solve any problem
-            you may have.</em
-          ></small
-        >
+          <div class="rect">
+            <div class="card_title">
+              <img src="../../images/profilepic-placeholder.png" alt="profilepic-placeholder">
+              <div class="reviewer">
+                <p>
+                  Marck Donovan <br>
+                  VP ENGINEERING
+                </p>
+              </div>
+            </div>
+            <blockquote>“ The best solution in the market to solve any problem yoy may have. 
+          </blockquote>
+          </div>
+
+          <div class="rect">
+            <div class="card_title">
+              <img src="../../images/profilepic-placeholder.png" alt="profilepic-placeholder">
+              <div class="reviewer">
+                <p>
+                  Marck Donovan <br>
+                  VP ENGINEERING
+                </p>
+              </div>
+            </div>
+            <blockquote>“ The best solution in the market to solve any problem yoy may have. 
+          </blockquote>
+          </div>
+        </div>
+
       </article>
 
       <aside>
@@ -115,7 +112,7 @@
         <p>New business-case for the AI industry... <u>read more</u></p>
 
         <h3>WE ARE HIRING!</h3>
-        <h4>ReactJS Frontend Developer</h4>
+        <h4>Java Backend Developer</h4>
         <ul>
           <li>5+ years of experience</li>
           <li>B2 English proficiency</li>
