--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -63,7 +63,7 @@
         <div class="rects" id="rects">
           <div class="rect">
             <div class="card_title">
-              <img src="../../images/profilepic-placeholder.png" alt="profilepic-placeholder">
+              <img src="../../images/rev1-pic.png" alt="profilepic-placeholder">
               <div class="reviewer">
                 <p>
                   Marck Donovan <br>
@@ -77,7 +77,7 @@
 
           <div class="rect">
             <div class="card_title">
-              <img src="../../images/profilepic-placeholder.png" alt="profilepic-placeholder">
+              <img src="../../images/rev2-pic.png" alt="profilepic-placeholder">
               <div class="reviewer">
                 <p>
                   Marck Donovan <br>
@@ -91,7 +91,7 @@
 
           <div class="rect">
             <div class="card_title">
-              <img src="../../images/profilepic-placeholder.png" alt="profilepic-placeholder">
+              <img src="../../images/rev3-pic.png" alt="profilepic-placeholder">
               <div class="reviewer">
                 <p>
                   Marck Donovan <br>
@@ -108,7 +108,7 @@
 
       <aside>
         <h3>Articles</h3>
-        <img src="../../images/image.png" alt="image" />
+        <img src="../../images/pic-ai.jpeg" alt="image" />
         <p>New business-case for the AI industry... <u>read more</u></p>
 
         <h3>WE ARE HIRING!</h3>
