--- a/src/tarea4/admin/index.html
+++ b/src/tarea4/admin/index.html
@@ -36,17 +36,21 @@
           </button>
           <h3 class="navbar-brand">
             <strong class="pageTitle text-light px-2"
-              >SISTEMA DE CONTROL Anticipos y Viáticos</strong
-            >
+              >SISTEMA DE CONTROL Anticipos y Viáticos</strong>
           </h3>
         </div>
-
-        <button
-          type="button"
-          class="btn btn-outline-secondary text-light border-white"
-        >
-          Salir
-        </button>
+          <div class="navbar-collapse justify-content-end">
+            <small>CRÉDITO: $3,000 MXN</small>
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+          </svg>
+          <button
+            type="button"
+            class="btn btn-outline-secondary text-light border-white" id="salir">
+            Salir
+          </button>
+        </div>
       </div>
     </nav>
   </header>
@@ -107,7 +111,7 @@
               id="menu"
             >
               <li class="nav-item">
-                <a href="#" class="nav-link align-middle px-0 hoverinBtn">
+                <a href="../usuarios/index.html" class="nav-link align-middle px-0 hoverinBtn">
                   <i class="fs-4 bi-house"></i>
                   <span class="ms-1 d-none d-sm-inline text-dark">Usuarios</span
                   ><i
@@ -117,7 +121,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link align-middle px-0 hoverinBtn">
+                <a href="../permisos/index.html" class="nav-link align-middle px-0 hoverinBtn">
                   <i class="fs-4 bi-house"></i>
                   <span class="ms-1 d-none d-sm-inline text-dark">Permisos</span
                   ><i
@@ -127,7 +131,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link align-middle px-0 hoverinBtn">
+                <a href="../finanzas/index.html" class="nav-link align-middle px-0 hoverinBtn">
                   <i class="fs-4 bi-house"></i>
                   <span class="ms-1 d-none d-sm-inline text-dark">Finanzas</span
                   ><i
