#15-styles-danger-removed

--- a/tarea4/usuarios/index.html
+++ b/tarea4/usuarios/index.html
@@ -70,7 +70,7 @@
   <!-- Menu lateral estatico -->
   <div class="container-fluid">
     <div class="row flex-nowrap">
-      <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+      <div class="col-auto col-md-3 col-xl-2 px-sm-1 px-0 bg-dark-subtle">
         <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100"
           style="background: white">
           <div class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
@@ -78,7 +78,7 @@
             
           </div>
           <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-            <li class="nav-item bg-danger">
+            <li class="nav-item ">
               <a href="../usuarios/index.html" class="nav-link align-middle px-0 hoverinBtn">
                   <div class="row bg-body-secondary">
                     <div class="col-2"></div>
@@ -93,7 +93,7 @@
                   </div>
               </a>
             </li>
-            <li class="nav-item bg-danger">
+            <li class="nav-item">
               <a href="../usuarios/index.html" class="nav-link align-middle px-0 hoverinBtn">
                   <div class="row bg-body-secondary">
                     <div class="col-2"></div>
@@ -108,7 +108,7 @@
                   </div>
               </a>
             </li>
-            <li class="nav-item bg-danger">
+            <li class="nav-item">
               <a href="../usuarios/index.html" class="nav-link align-middle px-0 hoverinBtn">
                   <div class="row bg-body-secondary">
                     <div class="col-2"></div>
@@ -127,7 +127,10 @@
           <hr />
         </div>
       </div>
-      <div class="col py-3" style="background: white">
+      <div class="col" style="background: white">
+        <div>
+          <nav class="navbar navbar-expand-lg nav-body"></nav>
+        </div>
         <div class="d-flex justify-content-between">
           <div class="flex-item"><button type="button" class="btn btn-outline-danger">NUEVO USUARIO</button></div>
           <div class="flex-item"><button type="button" class="btn btn-outline-danger">EXPORTAR EXCEL</button></div>
