#16-table-align-items

--- a/tarea4/usuarios/index.html
+++ b/tarea4/usuarios/index.html
@@ -149,8 +149,8 @@
             <td>Juan Manuel</td>
             <td>pepe@gmail.com</td>
             <td>Empleado</td>
-            <td><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked></td>
-            <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
+            <td class="dots"><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked></td>
+            <td class="dots"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
                 class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
                 <path
                   d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
@@ -161,8 +161,8 @@
             <td>Juan Manuel</td>
             <td>pepe@gmail.com</td>
             <td>Revisor</td>
-            <td><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked></td>
-            <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
+            <td class="dots"><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked></td>
+            <td class="dots"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
                 class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
                 <path
                   d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
@@ -173,8 +173,8 @@
             <td>Juan Manuel</td>
             <td>pepe@gmail.com</td>
             <td>Aprobador</td>
-            <td><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></td>
-            <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
+            <td class="dots"><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></td>
+            <td class="dots"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
                 class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
                 <path
                   d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
@@ -185,8 +185,8 @@
             <td>Juan Manuel</td>
             <td>pepe@gmail.com</td>
             <td>Administrador</td>
-            <td><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked></td>
-            <td><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
+            <td class="dots"><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked></td>
+            <td class="dots"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black"
                 class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
                 <path
                   d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
